Fixed header svg logo width on small screens

--- a/src/css/components/header/header.css
+++ b/src/css/components/header/header.css
@@ -22,6 +22,7 @@
 /* If the logo is an SVG, make sure it scales up. We set the actual width instead of a max width because SVGs can scale. */
 .Header-logo[src$='.svg'] {
     height: auto;
+    max-width: 100%;
     width: var(--Header-logo-width);
 }
 
